--- a/shop.html
+++ b/shop.html
@@ -58,12 +58,16 @@
   text-align: center;
 }
 .nav ul {
+   font-family: "Playfair Display", Georgia, serif; /* Classic font */
+font-weight: 30px;
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 20px;list-style: none;
+  padding: 20px;
+  list-style: none;
   display: flex;
   gap: 1.5rem;
+  text-shadow: 1px 1px 2px #4e4e4e;
 }
 
   
