--- a/index.html
+++ b/index.html
@@ -10,6 +10,17 @@
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   <!-- Load AOS JavaScript library -->
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-VDSJCJCD11"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-VDSJCJCD11');
+</script>
+
 </head>
 <style>
     body {
