--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta property="og:image" content="https://cb-collection.onrender.com/bags.jpg">
+    <meta name="description" content="Welcome to CB Collection Your premier destination for stylish and affordable fashion! CB Collection offers a curated selection of trendy clothing, shoes, and accessories for men and women. From statement pieces to everyday essentials, our collection is designed to help you elevate your wardrobe and express your personal style.">
+    
   <title>CB Collection - Elevate Your Style</title>
   <link rel="stylesheet" href="style.css" />
   <!-- AOS CSS library -->
@@ -20,7 +23,7 @@
 
   gtag('config', 'G-VDSJCJCD11');
 </script>
-
+<meta name="google-site-verification" content="c82zNIbJUUeELvrgZyV4WL6dXuO21kWSN_cM150nqa0" />
 </head>
 <style>
     body {
